test/functional/failtests/typeChecking/undefinedReturnType.txt
TypeError: Could not resolve type "double"
1 | func double:foo() {
  |      ^ (1:6)
2 |     return 1.0;

